Testsuite/ManualTests/4161/4161.c.gcov
        -:    0:Source:4161.c
        -:    0:Graph:4161.gcno
        -:    0:Data:4161.gcda
        -:    0:Runs:1
        -:    1:/* { dg-options "-std=c99 -Wc++-compat -Werror" { target c } } */
        -:    2:/* { dg-prune-output "treated as errors" } */
        -:    3:#include <stdio.h>
        -:    4:
        1:    5:int main() {
        1:    6:  for (int *p = (int[]){1, 2, 3, 0}; /* { dg-error "array" } */
        4:    7:       *p; ++p) {
        3:    8:    printf("%d\n", *p);
        -:    9:  }
        1:   10:  return 0;
        -:   11:}
